--- a/client/package.json
+++ b/client/package.json
@@ -1,16 +1,19 @@
 {
-  "name": "library",
+  "name": "renti-test",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.58",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "html-react-parser": "^1.2.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "urql": "^2.0.3",
+    "urql": "^2.0.4",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
