--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,11 @@
 version: "3"
 services:
+  react:
+    restart: always
+    build: ./client
+    ports:
+      - 3000:80
+
   node:
     restart: always
     build: ./server
@@ -7,6 +13,7 @@ services:
       - 5000:5000
     volumes:
       - ./:/code
+
   mongo:
     image: mongo
     ports:
